[package]
name = "mini-bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
serde_json = "1.0.81"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }