[package]
name = "mini-rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num_cpus = "1.16.0"
deque = "0.3.2"
once_cell = "1.19.0"

[[example]]
name = "quick_sort"
path = "examples/quick_sort.rs"